# Shape_c--_Oblig2

./: CMakeLists.txt  base.h  circle.h  main.cpp  square.h  triangle.h
